@@ -1,3 +1,9 @@
+2004-05-06  Sven Neumann  <sven@gimp.org>
+
+	* gtk/gtkexpander.c (gtk_expander_size_allocate): in RTL mode,
+	position the title lable next to the arrow just as we do for LTR
+	rendering. Fixes bug #141825.
+
 2004-05-06  Matthias Clasen  <mclasen@redhat.com>
 
 	* docs/RELEASE-HOWTO: Document the new policy of
